quic/s2n-quic-core/src/packet/snapshots/s2n_quic_core__packet__snapshots__retry.snap
---
source: quic/s2n-quic-core/src/packet/mod.rs
expression: values
---
[
    Retry(
        Retry {
            version: 4278190112,
            destination_connection_id: [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
            ],
            source_connection_id: [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
            ],
            retry_token: [
                84,
                104,
                101,
                32,
                84,
                111,
                107,
                101,
                110,
            ],
            retry_integrity_tag: [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
            ],
        },
    ),
]
