quic/s2n-quic-core/src/packet/snapshots/s2n_quic_core__packet__snapshots__version_negotiation.snap
---
source: quic/s2n-quic-core/src/packet/mod.rs
expression: values
---
[
    VersionNegotiation(
        VersionNegotiation {
            tag: 128,
            destination_connection_id: [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
            ],
            source_connection_id: [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
            ],
            supported_versions: [
                0,
                0,
                0,
                1,
                0,
                0,
                0,
                2,
                0,
                0,
                0,
                3,
            ],
        },
    ),
]
