quic/s2n-quic-core/src/packet/snapshots/s2n_quic_core__packet__snapshots__zero_rtt.snap
---
source: quic/s2n-quic-core/src/packet/mod.rs
expression: values

---
[
    ZeroRtt(
        ZeroRtt {
            version: 16909060,
            destination_connection_id: 6..26,
            source_connection_id: 27..47,
            packet_number: ProtectedPacketNumber,
            payload: ProtectedPayload {
                header_len: 48,
                buffer: DecoderBufferMut {
                    bytes: [
                        208,
                        1,
                        2,
                        3,
                        4,
                        20,
                        1,
                        2,
                        3,
                        4,
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        20,
                        1,
                        2,
                        3,
                        4,
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        8,
                        1,
                        2,
                        3,
                        4,
                        5,
                        6,
                        7,
                        8,
                    ],
                },
            },
        },
    ),
]
